hphp/hack/test/typecheck/records/record_init_nonexistent.php.exp
File "record_init_nonexistent.php", line 7, characters 12-24:
Unbound name: NO_SUCH_CONST (a global constant) (Naming[2049])
File "record_init_nonexistent.php", line 7, characters 12-24:
Unbound global constant (Typing) (Typing[4106])
