hphp/hack/test/typecheck/records/record_init_nonexistent.php
<?hh

const int FOO = 1;

record A {
  x: int = FOO,
  y: int = NO_SUCH_CONST,
}
